@@ -1,3 +1,9 @@
+2014-10-01  Ross Younger  <wry@ecoscentric.com>
+
+	* src/synth.ld src/synth_entry.c: Look for static constructors in
+	the .init_array section as well as .ctors (needed for gcc 4.7 and
+	later)
+
 2011-08-13  Sergei Gavrikov  <sergei.gavrikov@gmail.com>
 
 	* cdl/hal_synth.cdl (CYGPKG_HAL_SYNTH_TESTS): Fix a typo in make rule.
